- add of two data sets : danishuni and danishmulti

BUG FIXES
- correction the formula for the CvM test for Weibull distribution
- elimination of CvM and AD tests for normal, lognormal and logistic distributions : 
formulas previously used (given by Stephens 1986) do not use exactly MLE estimates and thus
results were only approximates.
- make arguments xlim and ylim functional in cdfcompcens


Version 0.4-3
=============

NEW FEATURES
- update cdfcomp and add denscomp, ppcomp and qqcomp functions.
- ppoints now used in "fitdist" for QQ plot, PP plot and cdf plot for continuous data
    (was used only for QQ plot in previous versions)


Version 0.4-2
=============

NEW FEATURES
- add of the arguments use.ppoints and a.ppoints in function "cdfcomp" to enable Blom type plotting position
    for cdf plot (using by default Hazen plotting position)

Version 0.4-1
=============

NEW FEATURES
- add of the argument "CI.type" to functions "quantiledist" and "quantiledistcens" 
- add of a message printed by  functions "quantiledist" and "quantiledistcens" in case of non convergence
    of parameter estimation for some bootstrap iterations
- add of a censored data set: "fluazinam" and associated examples

Version 0.4-0
=============

NEW FEATURES
- add of functions to calculate quantiles of the fitted distribution, with 95 percent CI calculated by bootstrap
    (functions "quantiledist" and "quantiledistcens")

Version 0.3-4
=============

NEW FEATURES
- posibility to fix xlegend to a keyword (e.g. "bottomright") in "cdfcomp" and "cdfcompdens"
- improvement of the new vignette

BUG FIXES
- correction of the NAMESPACE file in order to enable the correct print of a summary of a fitdistcens object
(with the correlation matrix, the loglikelihood and AIC and BIC statistics)

Version 0.3-3
=============

NEW FEATURES
- a new function ("cdfcompcens") to plot cumulative distributions corresponding to various fits using a same 
censored data set.